# personal-projects

./: README.md
animal-faces-classification/: animal-faces-classification.ipynb
back-2-viz-basics-2026/: README.md
back-2-viz-basics-2026/1-barchart/: README.md  WEF Youth Insight Report.csv  Week 1 - Bar Chart.twb
back-2-viz-basics-2026/2-linechart/: README.md  US Airlines Profit per Passenger 2015-2024.csv  Week 2 - Line Chart.twb
brain-tumour-classification/: brain-tumour-classification.ipynb
gdp-analysis/: README.md  functions.py  gdp-analysis.ipynb  gdp-challenges-python.ipynb  gdp-scenario-python.ipynb  main.py  pyproject.toml
gdp-analysis/gdp-scenario/: README.md  gdp-scenario-python.ipynb  main.py  pyproject.toml
house-prices-prediction/: house-price-prediction-updated.ipynb  house-price-prediction.ipynb  housing-schema.sql
langchain-ai-agent/: ai-research-output-2026-02-03.txt  langchain-ai-agent.py  langchain_tools.py  requirements.txt
rice-type-classification/: rice-type-classification-pytorch.ipynb
stock-price-prediction/: README.md  functions.py  main.py  pyproject.toml  stock-price-prediction-lstm.ipynb
video-game-sales-analysis/: README.md  video-game-sales-challenges-python.ipynb
