[project]
name = "stock-price-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "polars>=1.38.1",
    "scikit-learn>=1.8.0",
    "streamlit>=1.54.0",
    "torch>=2.10.0",
    "yfinance>=1.2.0",
]
